# pk-core

./: README.md  setup.cfg  setup.py
pk_core/: observer.py  patterns.py
pk_core/ui/: __init__.py
src/pk_core/ui/: dialogs.py
tests/: test_pk_core.py
